# zk-gacha-game

./: .gitignore  AI_GUIDELINES.md  DEVELOP_PLAN.md  GETTING_STARTED.md  LICENSE  README.md  biome.json  diff.txt  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/__tests__/: page.test.tsx
apps/web/__tests__/components/gacha/: GachaDisplay.test.tsx
apps/web/__tests__/stores/: gachaStore.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/demo/: page.tsx
apps/web/app/gacha/: page.tsx
apps/web/app/gacha/inventory/: page.tsx
apps/web/components/: icons.tsx
apps/web/components/gacha/: GachaDisplay.tsx
apps/web/components/ui/: alert.tsx  button.tsx  card.tsx
apps/web/lib/: wasmLoader.ts
apps/web/stores/: gachaStore.ts
apps/web/tests/: example.spec.ts
scripts/: Cargo.toml
scripts/src/: config.rs
